[project]
name = "teleop"
version = "0.1.0"
description = ""
authors = [
    {name = "yizhouzhao",email = "yizzhao@nvidia.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "matplotlib",
    "mediapipe",
    "pynput",
]


[project.optional-dependencies]
debug = [
    "jupyter",
]


[tool.poetry]
packages = [{include = "teleop", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
